# liquid-cache-bench

./: .gitignore  README.md
_dev_/: README.md  generate_results.py
json_bench/: README.md  setup.py
json_bench/json_to_variant/: Cargo.toml  README.md
json_bench/json_to_variant/src/: main.rs
stackoverflow/: README.md  setup.py
stackoverflow/query/: q0.sql  q1.sql  q2.sql  q3.sql  q4.sql
stackoverflow/results-dba/: q0.parquet  q1.parquet  q2.parquet  q3.parquet  q4.parquet
stackoverflow/results-math/: q0.parquet  q1.parquet  q2.parquet  q3.parquet  q4.parquet
stackoverflow/results-pets/: q0.parquet  q1.parquet  q2.parquet  q3.parquet  q4.parquet
