[package]
name = "json_to_variant"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "57.0.0", default-features = false, features = [
	"prettyprint",
] }
arrow-flight = { version = "57.0.0", features = ["flight-sql-experimental"] }
arrow-schema = { version = "57.0.0", features = ["serde"] }
parquet = { version = "57.0.0", features = [
	"async",
	"experimental",
	"variant_experimental",
] }
parquet-variant-json = { version = "0.2.0" }
parquet-variant = { version = "0.2.0" }
parquet-variant-compute = { version = "0.2.0" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"


[patch.crates-io]
# Arrow/Parquet from main — include all the subcrates DF uses
arrow = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-array = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-buffer = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-cast = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-data = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-ipc = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-ord = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-row = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-schema = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-select = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
arrow-flight = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
parquet = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
parquet-variant-json = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
parquet-variant = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
parquet-variant-compute = { git = "https://github.com/apache/arrow-rs.git", branch = "main" }
